[tool.poetry]
name = "aenet"
version = "1.0.0"
description = ""
authors = ["Marco Barbero Mota <marco.barbero.mota@vanderbilt.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
scikit-learn = ">=0.24.1"
cvxpy = ">=1.1.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^21.4b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = 'black'
force_single_line = true
